--- a/src/style.css
+++ b/src/style.css
@@ -35,8 +35,8 @@ h2 {
     background-color: #FFDEDE;
     flex: 4;
     display: grid;
-    grid-template-columns: 30% 30% 30%;
-    grid-auto-columns: 30%;
+    grid-template-columns: minmax(400px,1fr) minmax(400px,1fr) minmax(400px,1fr);
+    grid-auto-columns: minmax(400px,1fr);
     padding: 30px;
     gap: 50px;
     position: relative;
